--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -9,18 +9,27 @@
     width: 100%;
     font-size: 3vw;
     border-style: hidden;
-
+  }
+  .surveyhscreen {
+    display: none;
+  }
+  td {
+    padding: 5px;
   }
   #reviewrighta {
+    float: left;
+    float: bottom;
     font-size: 3vw;
     border-style: hidden;
-    width: 40%;
+    width: 100%;
 
   }
   #reviewrightb {
-    font-size: 3vw;
+    float: right;
+    float: bottom;
+    font-size: 2vw;
     border-style: hidden;
-    width: 40%;
+    width: 100%;
 
   }
 
@@ -44,6 +53,10 @@
     -ms-transition: all 1s ease;
     transition: all 1s ease;
     z-index: 10;
+  }
+
+  .surveyhprint{
+    display: none;
   }
 
   .thumbpic:hover {
