--- a/views/CostOwner/index.ejs
+++ b/views/CostOwner/index.ejs
@@ -22,6 +22,7 @@
 
 <div id="reviewbox">
       <div id="reviewleft" class="fadeinout">
+        <h3 id="getdate" class="surveyhprint"></h3>
       <table>
           <tbody>
             <tr>
@@ -49,6 +50,7 @@
     </div>
 
     <div id="reviewrighta" class"reviewowner fadeinout">
+      <h2 class="surveyhprint">Option 1</h2>
       <table>
         <tr>
           <td class="largetext basictext">Annual Maintenance Fees: </td>
