--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -22,6 +22,7 @@
 
 <div id="reviewbox">
       <div id="reviewleft" class="fadeinout">
+          <h3 id="getdate" class="surveyhprint"></h3>
       <table>
           <tbody>
             <tr>
@@ -50,7 +51,8 @@
 
     <div id="reviewrighta" class"fadeinout">
       <div class="numberno">
-        <h2>1</h2>
+        <h2 class="surveyhscreen">1</h2>
+        <h2 class="surveyhprint">Option 1</h2>
       </div>
       <table>
         <tr>
@@ -65,7 +67,8 @@
     </div>
     <div id="reviewrightb" class"fadeinout">
       <div class="numberno">
-        <h2>2</h2>
+        <h2 class="surveyhscreen">2</h2>
+        <h2 class="surveyhprint">Option 2</h2>
       </div>
       <table>
         <tr>
