--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -14,7 +14,7 @@
     display: none;
   }
   td {
-    padding: 5px;
+    padding: 7px;
   }
   #reviewrighta {
     float: left;
@@ -27,10 +27,15 @@
   #reviewrightb {
     float: right;
     float: bottom;
-    font-size: 2vw;
+    font-size: 3vw;
     border-style: hidden;
     width: 100%;
-
+  }
+  .smalltext {
+    font-size: 2vw;
+  }
+  .supertext {
+    font-size: 4.5vw;
   }
 
 }
