--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -7,13 +7,13 @@
   }
   #reviewleft {
     width: 100%;
-    font-size: 3vw;
+    font-size: 3.15vw;
     border-style: hidden;
   }
   .surveyhscreen {
     display: none;
   }
-  td {
+  #reviewleft td {
     padding: 7px;
   }
   #reviewrighta {
@@ -22,7 +22,6 @@
     font-size: 3vw;
     border-style: hidden;
     width: 100%;
-
   }
   #reviewrightb {
     float: right;
@@ -30,6 +29,9 @@
     font-size: 3vw;
     border-style: hidden;
     width: 100%;
+  }
+  #reviewrighta, #reviewrightb td {
+    padding: 4px;
   }
   .smalltext {
     font-size: 2vw;
