--- a/views/CostOwner/index.ejs
+++ b/views/CostOwner/index.ejs
@@ -19,7 +19,7 @@
           <td id="gc5" class="surveytext ">How much will maintenance fees increase yearly?</td>
         </tr>
       </table>
-
+<h3 class="surveyhprint">Premium Destinations</h3>
 <div id="reviewbox">
       <div id="reviewleft" class="fadeinout">
         <h3 id="getdate" class="surveyhprint"></h3>
@@ -51,6 +51,7 @@
 
     <div id="reviewrighta" class"reviewowner fadeinout">
       <table>
+        <h2 class="surveyhprint">Current Scenario</h2>
         <tr>
           <td class="largetext basictext">Annual Maintenance Fees: </td>
           <td id="ownermaintenance" class="ownermoney largetext"></td>
