--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -19,7 +19,7 @@
           <td id="gc5" class="surveytext">What do you think inflation will be over 10 years?</td>
         </tr>
       </table>
-
+<h3 class="surveyhprint">Premium Destinations</h3>
 <div id="reviewbox">
       <div id="reviewleft" class="fadeinout">
           <h3 id="getdate" class="surveyhprint"></h3>
@@ -52,7 +52,7 @@
     <div id="reviewrighta" class"fadeinout">
       <div class="numberno">
         <h2 class="surveyhscreen">1</h2>
-        <h2 class="surveyhprint">Option 1</h2>
+        <h2 class="surveyhprint">Scenario #1</h2>
       </div>
       <table>
         <tr>
@@ -68,7 +68,7 @@
     <div id="reviewrightb" class"fadeinout">
       <div class="numberno">
         <h2 class="surveyhscreen">2</h2>
-        <h2 class="surveyhprint">Option 2</h2>
+        <h2 class="surveyhprint">Scenario #2</h2>
       </div>
       <table>
         <tr>
