--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -7,7 +7,7 @@
   }
   #reviewleft {
     width: 100%;
-    font-size: 3.15vw;
+    font-size: 3.5vw;
     border-style: hidden;
   }
   .surveyhscreen {
@@ -30,16 +30,21 @@
     border-style: hidden;
     width: 100%;
   }
-  #reviewrighta, #reviewrightb td {
+  #reviewrightb td {
+    padding: 4px;
+  }
+  #reviewrighta td {
     padding: 4px;
   }
   .smalltext {
-    font-size: 2vw;
+    font-size: 2.5vw;
   }
   .supertext {
     font-size: 4.5vw;
   }
-
+  h1 {
+    display: none;
+  }
 }
 @media screen {
 #divSurveyScreen {
