--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -1,7 +1,8 @@
 <div class="homepage">
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
-      <h1><span id="hheader">Vacation Calculator</span></h1>
+      <h1><span id="hheader" class="surveyhscreen">Vacation Calculator</span></h1>
+      <h1 class="surveyhprint" class="surveyhprint">Premium Destinations</h1>
       <table id="questiontable">
         <tr>
           <td id="gc1" class="surveytext">How many people will vacation together?</td>
@@ -19,10 +20,10 @@
           <td id="gc5" class="surveytext">What do you think inflation will be over 10 years?</td>
         </tr>
       </table>
-<h3 class="surveyhprint">Premium Destinations</h3>
+
 <div id="reviewbox">
       <div id="reviewleft" class="fadeinout">
-          <h3 id="getdate" class="surveyhprint"></h3>
+      <h2 class="surveyhprint" class="surveyhprint">Survey Responses</h2>
       <table>
           <tbody>
             <tr>
