--- a/views/CostOwner/index.ejs
+++ b/views/CostOwner/index.ejs
@@ -1,7 +1,8 @@
 <div class="homepage">
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
-      <h1><span id="hheader">Owner Calculator</span></h1>
+      <h1><span id="hheader" class="surveyhscreen">Owner Calculator</span></h1>
+      <h1 class="surveyhprint" class="surveyhprint">Premium Destinations</h1>
       <table id="questiontable">
         <tr>
           <td id="gc1" class="surveytext owner">What are the yearly maintenance fees?</td>
@@ -19,10 +20,9 @@
           <td id="gc5" class="surveytext ">How much will maintenance fees increase yearly?</td>
         </tr>
       </table>
-<h3 class="surveyhprint">Premium Destinations</h3>
 <div id="reviewbox">
+  <h2 class="surveyhprint" class="surveyhprint">Survey Responses</h2>
       <div id="reviewleft" class="fadeinout">
-        <h3 id="getdate" class="surveyhprint"></h3>
       <table>
           <tbody>
             <tr>
