--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -9,6 +9,7 @@
     width: 100%;
     font-size: 3.5vw;
     border-style: hidden;
+    margin: 10px 0px 10px 0px;
   }
   .surveyhscreen {
     display: none;
@@ -22,6 +23,7 @@
     font-size: 3vw;
     border-style: hidden;
     width: 100%;
+    margin: 10px 0px 10px 0px;
   }
   #reviewrightb {
     float: right;
@@ -29,6 +31,7 @@
     font-size: 3vw;
     border-style: hidden;
     width: 100%;
+    margin: 10px 0px 10px 0px;
   }
   #reviewrightb td {
     padding: 4px;
