--- a/views/CostOwner/index.ejs
+++ b/views/CostOwner/index.ejs
@@ -2,7 +2,7 @@
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
       <h1><span id="hheader" class="surveyhscreen">Owner Calculator</span></h1>
-      <h1 class="surveyhprint" class="surveyhprint">Premium Destinations</h1>
+      <h1 class="surveyhprint">Premium Destinations</h1>
       <table id="questiontable">
         <tr>
           <td id="gc1" class="surveytext owner">What are the yearly maintenance fees?</td>
