--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -45,6 +45,12 @@
   .supertext {
     font-size: 4.5vw;
   }
+  h1 {
+    font-size: 50px;
+  }
+  #divDisplaysignbase{
+    display: none;
+  }
 }
 @media screen {
 #divSurveyScreen {
