--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -23,7 +23,7 @@
 
 <div id="reviewbox">
       <div id="reviewleft" class="fadeinout">
-      <h2 class="surveyhprint" class="surveyhprint">Survey Responses</h2>
+      <h2 class="surveyhprint">Survey Responses</h2>
       <table>
           <tbody>
             <tr>
