--- a/views/Shared/_display_buttons.ejs
+++ b/views/Shared/_display_buttons.ejs
@@ -22,4 +22,4 @@
   </table>
 
   </div>
-<img id="divDisplaysignbase" class="shadow surveyhprint" src="/images/signbase.jpg"></img>
+<img id="divDisplaysignbase" class="shadow" src="/images/signbase.jpg"></img>
