--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -1,19 +1,12 @@
 @media print {
-  #printbutt {
-    display: none;
-  }
-  #lnkHomeIcon {
-    display: none;
-  }
+
   #reviewleft {
     width: 100%;
     font-size: 3.5vw;
     border-style: hidden;
     margin: 10px 0px 10px 0px;
   }
-  .surveyhscreen {
-    display: none;
-  }
+
   #reviewleft td {
     padding: 7px;
   }
@@ -48,7 +41,7 @@
   h1 {
     font-size: 50px;
   }
-  #divDisplaysignbase{
+  #divDisplaysignbase #divDisplayButtons #lnkHomeIcon #printbutt .surveyhscreen #trigger {
     display: none;
   }
 }
