--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -41,7 +41,25 @@
   h1 {
     font-size: 50px;
   }
-  #divDisplaysignbase #divDisplayButtons #lnkHomeIcon #printbutt .surveyhscreen #trigger {
+  #divDisplaysignbase {
+    display: none;
+  }
+  #divDisplayButtons  {
+    display: none;
+  }
+  #lnkHomeIcon  {
+    display: none;
+  }
+  #lnkHomeIcon {
+    display: none;
+  }
+  #printbutt {
+    display: none;
+  }
+  .surveyhscreen  {
+    display: none;
+  }
+  #trigger {
     display: none;
   }
 }
