--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -2,44 +2,44 @@
 
   #reviewleft {
     width: 100%;
-    font-size: 3.5vw;
+    font-size: 2cm;
     border-style: hidden;
-    margin: 10px 0px 10px 0px;
+    margin: 1cm 0cm 10cm 0cm;
   }
 
   #reviewleft td {
-    padding: 7px;
+    padding: .7cm;
   }
   #reviewrighta {
     float: left;
     float: bottom;
-    font-size: 3vw;
+    font-size: 3cm;
     border-style: hidden;
     width: 100%;
-    margin: 10px 0px 10px 0px;
+    margin: 1cm 0cm 10cm 0cm;
   }
   #reviewrightb {
     float: right;
     float: bottom;
-    font-size: 3vw;
+    font-size: 3cm;
     border-style: hidden;
     width: 100%;
-    margin: 10px 0px 10px 0px;
+    margin: 1cm 0cm 10cm 0cm;
   }
   #reviewrightb td {
-    padding: 4px;
+    padding: .5cm;
   }
   #reviewrighta td {
-    padding: 4px;
+    padding: .5cm;
   }
   .smalltext {
-    font-size: 2.5vw;
+    font-size: 2.5cm;
   }
   .supertext {
-    font-size: 4.5vw;
+    font-size: 4.5cm;
   }
   h1 {
-    font-size: 50px;
+    font-size: 5cm;
   }
   #divDisplaysignbase {
     display: none;
