--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -8,7 +8,7 @@
   }
 
   #reviewleft td {
-    padding: .5cm;
+    padding: .3cm;
   }
   #reviewrighta {
     float: left;
@@ -21,7 +21,7 @@
   #reviewrightb {
     float: right;
     float: bottom;
-    font-size: 1.5cm;
+    font-size: .8cm;
     border-style: hidden;
     width: 100%;
     margin: 1cm 0cm 1cm 0cm;
@@ -33,13 +33,13 @@
     padding: .5cm;
   }
   .smalltext {
-    font-size: 2.5cm;
+    font-size: 1cm;
   }
   .supertext {
-    font-size: 2cm;
+    font-size: 1cm;
   }
   h1 {
-    font-size: 2.5cm;
+    font-size: 2cm;
   }
   #divDisplaysignbase {
     display: none;
