--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -2,7 +2,7 @@
 
   #reviewleft {
     width: 100%;
-    font-size: 1cm;
+    font-size: .5cm;
     border-style: hidden;
     margin: 1cm 0cm 1cm 0cm;
   }
@@ -13,7 +13,7 @@
   #reviewrighta {
     float: left;
     float: bottom;
-    font-size: 1.5cm;
+    font-size: .5cm;
     border-style: hidden;
     width: 100%;
     margin: 1cm 0cm 1cm 0cm;
@@ -33,13 +33,13 @@
     padding: .5cm;
   }
   .smalltext {
-    font-size: 1cm;
+    font-size: .5cm;
   }
   .supertext {
-    font-size: 1cm;
+    font-size: .5cm;
   }
   h1 {
-    font-size: 2cm;
+    font-size: 1.3cm;
   }
   #divDisplaysignbase {
     display: none;
