--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -16,15 +16,15 @@
     font-size: .5cm;
     border-style: hidden;
     width: 100%;
-    margin: 1cm 0cm 1cm 0cm;
+    margin: .15cm 0cm .15cm 0cm;
   }
   #reviewrightb {
     float: right;
     float: bottom;
-    font-size: .8cm;
+    font-size: .5cm;
     border-style: hidden;
     width: 100%;
-    margin: 1cm 0cm 1cm 0cm;
+    margin: .15cm 0cm .15cm 0cm;
   }
   #reviewrightb td {
     padding: .5cm;
