--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -4,7 +4,7 @@
     width: 100%;
     font-size: .5cm;
     border-style: hidden;
-    margin: 1cm 0cm 1cm 0cm;
+    margin: .5cm 0cm .5cm 0cm;
   }
 
   #reviewleft td {
@@ -27,10 +27,10 @@
     margin: .15cm 0cm .15cm 0cm;
   }
   #reviewrightb td {
-    padding: .5cm;
+    padding: .15cm;
   }
   #reviewrighta td {
-    padding: .5cm;
+    padding: .15cm;
   }
   .smalltext {
     font-size: .5cm;
